--- a/views/product_views.xml
+++ b/views/product_views.xml
@@ -4,12 +4,50 @@
         <field name="name">easy.sales.product.list</field>
         <field name="model">easy.sales.product</field>
         <field name="arch" type="xml">
-            <list editable="top">
+            <list editable="top" decoration-warning="total_stock &lt; 10" decoration-danger="total_stock == 0">
+                <field name="name"/>
+                <field name="price" widget="monetary"/>
+                <field name="category_id" options="{'no_create': False}"/>
+                <field name="total_stock" string="Stock Total" widget="integer"/>
+            </list>
+        </field>
+    </record>
+
+    <record id="view_product_kanban" model="ir.ui.view">
+        <field name="name">easy.sales.product.kanban</field>
+        <field name="model">easy.sales.product</field>
+        <field name="arch" type="xml">
+            <kanban class="o_kanban_mobile">
+                <field name="id"/>
                 <field name="name"/>
                 <field name="price"/>
                 <field name="category_id"/>
                 <field name="total_stock"/>
-            </list>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_card oe_kanban_global_click">
+                            <div class="o_kanban_record_top mb16">
+                                <div class="o_kanban_record_headings">
+                                    <strong class="o_kanban_record_title">
+                                        <field name="name"/>
+                                    </strong>
+                                </div>
+                                <span class="badge badge-pill" t-attf-class="#{record.total_stock.raw_value &lt; 10 ? 'badge-warning' : 'badge-success'}">
+                                    Stock: <field name="total_stock"/>
+                                </span>
+                            </div>
+                            <div class="o_kanban_record_bottom">
+                                <div class="oe_kanban_bottom_left">
+                                    <field name="category_id"/>
+                                </div>
+                                <div class="oe_kanban_bottom_right">
+                                    <strong>$<field name="price"/></strong>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
         </field>
     </record>
 
@@ -19,17 +57,29 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive" invisible="1"/>
+                    </div>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" placeholder="Nombre del producto..."/>
+                        </h1>
+                    </div>
                     <group>
-                        <field name="name"/>
-                        <field name="price"/>
-                        <field name="category_id"/>
+                        <group string="Información General">
+                            <field name="category_id" options="{'no_create': False, 'no_create_edit': True}"/>
+                            <field name="price" widget="monetary"/>
+                        </group>
+                        <group string="Inventario">
+                            <field name="total_stock" widget="integer" readonly="1"/>
+                        </group>
                     </group>
                     <notebook>
-                        <page string="Tallas y Stock">
-                            <field name="size_lines">
+                        <page string="Tallas y Stock" name="sizes">
+                            <field name="size_lines" nolabel="1">
                                 <list editable="top">
-                                    <field name="size"/>
-                                    <field name="stock"/>
+                                    <field name="size" widget="selection"/>
+                                    <field name="stock" widget="integer" decoration-warning="stock &lt; 5" decoration-danger="stock == 0"/>
                                 </list>
                             </field>
                         </page>
@@ -39,11 +89,39 @@
         </field>
     </record>
 
+    <record id="view_product_search" model="ir.ui.view">
+        <field name="name">easy.sales.product.search</field>
+        <field name="model">easy.sales.product</field>
+        <field name="arch" type="xml">
+            <search string="Buscar Productos">
+                <field name="name" string="Nombre"/>
+                <field name="category_id" string="Categoría"/>
+                <separator/>
+                <filter string="Con Stock" name="with_stock" domain="[('total_stock', '&gt;', 0)]"/>
+                <filter string="Sin Stock" name="no_stock" domain="[('total_stock', '=', 0)]"/>
+                <filter string="Stock Bajo (&lt;10)" name="low_stock" domain="[('total_stock', '&lt;', 10), ('total_stock', '&gt;', 0)]"/>
+                <group expand="0" string="Agrupar Por">
+                    <filter string="Categoría" name="group_category" context="{'group_by': 'category_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="action_product" model="ir.actions.act_window">
         <field name="name">Productos</field>
         <field name="res_model">easy.sales.product</field>
-        <field name="view_mode">list,form</field>
-        <field name="view_id" ref="view_product_tree"/>
+        <field name="view_mode">kanban,list,form</field>
+        <field name="view_id" ref="view_product_kanban"/>
+        <field name="search_view_id" ref="view_product_search"/>
+        <field name="context">{'search_default_with_stock': 1}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                ¡Agrega tu primer producto!
+            </p>
+            <p>
+                Define tus productos con precios y gestiona el stock por talla.
+            </p>
+        </field>
     </record>
 
     <record id="view_category_tree" model="ir.ui.view">
@@ -51,7 +129,7 @@
         <field name="model">easy.sales.category</field>
         <field name="arch" type="xml">
             <list editable="top">
-                <field name="name"/>
+                <field name="name" required="1" placeholder="Nombre de la categoría..."/>
             </list>
         </field>
     </record>
@@ -62,9 +140,11 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <group>
-                        <field name="name"/>
-                    </group>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" placeholder="Nombre de la categoría..."/>
+                        </h1>
+                    </div>
                 </sheet>
             </form>
         </field>
@@ -75,5 +155,13 @@
         <field name="res_model">easy.sales.category</field>
         <field name="view_mode">list,form</field>
         <field name="view_id" ref="view_category_tree"/>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                ¡Crea tu primera categoría!
+            </p>
+            <p>
+                Organiza tus productos por categorías para una mejor gestión.
+            </p>
+        </field>
     </record>
 </odoo>
